syntax = "proto3";

package NameSpaca_Address;

message CAddress
{
    int32 addr_id = 1;
    bytes addr_name = 2;
}